--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,13 @@ ethereum-tx-sign = "4.0.0"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 
+# client deps
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+
+# misc
+error-chain = "0.12.4"
+
+
 [[bin]] # Bin to run the worker node
 name = "worker"
 path = "src/worker.rs"
