--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ warp = "0.3"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 
 # misc
-error-chain = "0.12.4"
+anyhow = "1.0.65"
 
 
 [[bin]] # Bin to run the worker node
