--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,8 @@ tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 
 # client deps
-reqwest = { version = "0.11", features = ["json", "blocking"] }
+reqwest = { version = "0.11", features = ["json"] }
+
 
 # misc
 anyhow = "1.0.65"
