--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ rand_chacha = "0.2"
 hex = "0.4.3"
 ecies = {version = "0.2.2", default-features = false, features = ["pure"]}
 sha3 = "0.10.1"
+base64 = "0.13.0"
 
 # web3 deps
 ethabi = { version = "17.1.0", default-features = false }
