--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ eth2_ssz = "0.4.0"
 eth2_ssz_derive = "0.3.0"
 eth2_ssz_types = "0.2.1"
 tree_hash = "0.4.0"
+tree_hash_derive = "0.4.0"
 
 # server deps
 tokio = { version = "1", features = ["full"] }
