--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,9 +38,16 @@ tree_hash_derive = "0.4.0"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 
+# client deps
+reqwest = { version = "0.11", features = ["json"] }
+
 # misc
 anyhow = "1.0.65"
 
 [[bin]] # Bin to run the sgx-signer rpc
 name = "secure-signer"
 path = "src/secure_signer.rs"
+
+[[bin]] # Bin to run the client 
+name = "client"
+path = "src/client.rs"
