--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde-hex = "0.1.0"
 
 # crypto deps
 blst = "0.3.10"
-rand = "0.7"
+rand = "0.8.4"
 rand_chacha = "0.2"
 hex = "0.4.3"
 ecies = {version = "0.2.2", default-features = false, features = ["pure"]}
@@ -28,6 +28,7 @@ openssl = "0.10.42"
 bytes = "1"
 
 # eth deps
+eth-keystore = "0.5.0"
 eth2_ssz = "0.4.0"
 eth2_ssz_derive = "0.3.0"
 eth2_ssz_types = "0.2.1"
