Secure-Signer correctly running on Intel SGX (via Occlum) with working EPID remote attestation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ if(BUILD_MODE STREQUAL "Debug")
   ADD_COMPILE_OPTIONS(-O0 -g2 -DDEBUG -UNDEBUG -UEDEBUG)
 endif()
 
-PROJECT(REMOTE_ATTESTATION LANGUAGES CXX VERSION 0.1.0)
+PROJECT(SECURE_SIGNER LANGUAGES CXX VERSION 0.1.0)
 MESSAGE(STATUS "BINARY dir " ${CMAKE_CURRENT_BINARY_DIR})
 MESSAGE(STATUS "SOURCE dir " ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -37,6 +37,27 @@ SET(CUSTOM_LIB epid_ra)
 FILE(GLOB APP_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 # create static libepid_ra.a
 ADD_LIBRARY(${CUSTOM_LIB} ${APP_SRCS})
+TARGET_INCLUDE_DIRECTORIES(
+  ${CUSTOM_LIB} PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_SOURCE_DIR}/lib/include
+  ${SGXSDK_INSTALL_DIR}/include
+  ${OCCLUM_INSTALL_DIR}/include
+)
+# link this to libocclumra.a
+TARGET_LINK_LIBRARIES(${CUSTOM_LIB}
+  -L${CMAKE_CURRENT_BINARY_DIR} -l${RALIB}
+  -L${OCCLUM_INSTALL_DIR}/lib -lcurl -lcrypto
+  -Wl,-rpath=${CMAKE_CURRENT_BINARY_DIR}:${OCCLUM_INSTALL_DIR}/lib
+)
+ADD_DEPENDENCIES(${CUSTOM_LIB} ${RALIB})
+
+
+# GET SHARED OBJECT FILE FOR RA LIB TO CALL FROM PYTHON
+SET(CUSTOM_LIB epid)
+FILE(GLOB APP_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+# create shared lib libepid.so
+ADD_LIBRARY(${CUSTOM_LIB} SHARED ${APP_SRCS})
 TARGET_INCLUDE_DIRECTORIES(
   ${CUSTOM_LIB} PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
