--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,12 @@ bytes = "1"
 eth-keystore = "0.5.0"
 eth2_ssz = "0.4.0"
 eth2_ssz_derive = "0.3.0"
-eth2_ssz_types = "0.2.1"
-tree_hash = "0.4.0"
-tree_hash_derive = "0.4.0"
+# eth2_ssz_types = "0.2.1"
+# tree_hash = "0.4.0"
+# tree_hash_derive = "0.4.0"
+eth2_ssz_types = { path = "/root/secure-signer/ssz_types" }
+tree_hash = { path = "/root/secure-signer/tree_hash/tree_hash" }
+tree_hash_derive = { path = "/root/secure-signer/tree_hash/tree_hash_derive" }
 
 # server deps
 tokio = { version = "1", features = ["full"] }
