--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ reqwest = { version = "0.11", features = ["json"] }
 
 # misc
 anyhow = "1.0.65"
+clap = { version = "4.1.1", features = ["derive"] }
 
 [[bin]] # Bin to run the sgx-signer rpc
 name = "secure-signer"
