--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,10 +48,14 @@ reqwest = { version = "0.11", features = ["json"] }
 anyhow = "1.0.65"
 clap = { version = "4.1.1", features = ["derive"] }
 
+[features]
+dev = []
+
 [[bin]] # Bin to run the sgx-signer rpc
 name = "secure-signer"
 path = "src/secure_signer.rs"
 
 [[bin]] # Bin to run the client 
+required-features = ["dev"]
 name = "client"
 path = "src/client.rs"
