--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,7 +27,7 @@ permalink: pretty
 
 # Build settings
 # theme: just-the-docs
-remote_theme: just-the-docs
+remote_theme: pmarsceill/just-the-docs
 
 
 
