fix reference to eip3076

--- a/resources/keymanager/paths/keystores.yaml
+++ b/resources/keymanager/paths/keystores.yaml
@@ -36,12 +36,9 @@ post:
   operationId: KEYMANAGER_IMPORT
   summary: Import Keystore.
   description: |
-    Import a single BLS keystore conforming to EIP-3076: Slashing Protection Interchange Format (currently only V3 supported). The 
-    user's password is encrypted via ECDH with the `encrypting_pk_hex` ETH SECP256K1 public key that is safeguarded within
-    the enclave. It is expected that the user first have Secure-Signer perform remote attestation with `encrypting_pk_hex` to gain trust.
+    Import a single BLS keystore conforming to [Web3 Secret Storage Definition](https://github.com/ethereum/wiki/wiki/Web3-Secret-Storage-Definition) (currently only V3 supported). The user's password is encrypted via ECDH with the `encrypting_pk_hex` ETH SECP256K1 public key that is safeguarded within the enclave. It is expected that the user first have Secure-Signer perform remote attestation with `encrypting_pk_hex` to gain trust.
 
-    The `slashing_protection` interchange format may store the signing histories of multiple BLS keys. Currently Secure-Signer only supports
-    importing a single key at a time. This limitation means only the 0th indexed key will be imported: `slashing_protection["data"][0]`. If 
+    The `slashing_protection` follows the EIP-3076: Slashing Protection Interchange Format, which may store the signing histories of multiple BLS keys. Currently Secure-Signer only supports importing a single key at a time. This limitation means only the 0th indexed key will be imported: `slashing_protection["data"][0]`. If 
     this `slashing_protection["data"][0]["pubkey"]` does not match the pubkey decrypted from the keystore, the import will fail. If no `slashing_protection`
     is supplied, an empty one will be generated starting from `slot=0`, `source_epoch=0`, and `target_epoch=0`.
   security:
