--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 serde-hex = "0.1.0"
+env_logger = "0.10.0"
+log = "0.4.17"
 
 # crypto deps
 blst = "0.3.10"
