--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,11 @@ reqwest = { version = "0.11", features = ["json"] }
 anyhow = "1.0.65"
 clap = { version = "4.1.1", features = ["derive"] }
 
+[dev-dependencies]
+reqwest = { version = "0.11.16", features = ["json"] }
+snap = "1.0.1"
+serde_yaml = "0.8.13"
+
 [features]
 sgx = []
 
