--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ bytes = "1"
 sha3 = "0.10.6"
 
 # eth deps
-eth-keystore = "0.5.0"
+eth-keystore = { git = "https://github.com/PufferFinance/eth-keystore-rs" }
 eth2_ssz = "0.4.0"
 eth2_ssz_derive = "0.3.0"
 eth2_ssz_types = { git = "https://github.com/PufferFinance/ssz_types" }
