Consolidate EPID cpp files to io module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ TARGET_LINK_LIBRARIES(${RALIB}
 )
 
 SET(CUSTOM_LIB epid_ra)
-FILE(GLOB APP_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+FILE(GLOB APP_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/io/*.cpp)
 # create static libepid_ra.a
 ADD_LIBRARY(${CUSTOM_LIB} ${APP_SRCS})
 TARGET_INCLUDE_DIRECTORIES(
@@ -55,7 +55,7 @@ ADD_DEPENDENCIES(${CUSTOM_LIB} ${RALIB})
 
 # GET SHARED OBJECT FILE FOR RA LIB TO CALL FROM PYTHON
 SET(CUSTOM_LIB epid)
-FILE(GLOB APP_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+FILE(GLOB APP_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/io/*.cpp)
 # create shared lib libepid.so
 ADD_LIBRARY(${CUSTOM_LIB} SHARED ${APP_SRCS})
 TARGET_INCLUDE_DIRECTORIES(
