--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,6 @@ ethereum_serde_utils = "0.5.1"
 # crypto deps
 blsttc = { version = "8.0.2", git = "https://github.com/PufferFinance/blsttc" }
 libsecp256k1 = "0.7.1"
-blst = "0.3.10"
 rand = "0.8.4"
 rand_chacha = "0.2"
 hex = "0.4.3"
@@ -52,7 +51,8 @@ reqwest = { version = "0.11", features = ["json"] }
 
 # misc
 anyhow = "1.0.65"
-clap = { version = "4.1.1", features = ["derive"] }
+clap = { version = "4.1.1", features = ["derive"], optional = true }
+
 
 [dev-dependencies]
 reqwest = { version = "0.11.16", features = ["json"] }
@@ -66,6 +66,7 @@ sgx = []
 name = "secure-signer"
 path = "src/main.rs"
 
-# [[bin]] # Bin to run the client 
-# name = "client"
-# path = "src/client.rs"
+[[bin]] # Bin to run the client 
+name = "client"
+path = "src/client/mod.rs"
+required-features = ["clap"]
