Updated developement container scripts. Secure-Signer SGX instance passes all integration tests and works with refactored client

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+build/
+deps/
+etc/
+keys/
+keystores/
+ss_out/
+Secure-Signer/
