--- a/conf/secure-signer-rust-config.yaml
+++ b/conf/secure-signer-rust-config.yaml
@@ -4,4 +4,4 @@ targets:
   - target: /bin
     copy:
       - files:
-        - /root/secure-signer/target/x86_64-unknown-linux-musl/release/secure-signer
+        - ../target/x86_64-unknown-linux-musl/release/secure-signer
