--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -15,4 +15,4 @@ jobs:
       - uses: actions/checkout@v3
   
       - name: build and test on local container
-        run: bash ../build_secure_signer.sh $LOCAL_DEV=true -t _testResults
+        run: bash build_secure_signer.sh $LOCAL_DEV=true -t _testResults
