--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -12,7 +12,7 @@ jobs:
   test:
     runs-on: ubuntu-20.04
     steps:
-      - name: 'Checkout'
+      - name: 'Checkout latest'
         uses: actions/checkout@v3
       
       - name: 'Install rust'
