--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -31,6 +31,6 @@ jobs:
           make clean-archives
         shell: bash
   
-      - name: 'Run unit tests'
+      - name: 'Run unit-tests'
         run: cargo test -- --test-threads 1 
         shell: bash
