--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ libsecp256k1 = "0.7.1"
 rand = "0.8.4"
 rand_chacha = "0.2"
 hex = "0.4.3"
-ecies = {version = "0.2.2", default-features = false, features = ["pure"]}
+ecies = { version = "0.2.2", default-features = false, features = ["pure"] }
 openssl = "0.10.42"
 bytes = "1"
 sha3 = "0.10.6"
@@ -52,6 +52,8 @@ reqwest = { version = "0.11", features = ["json"] }
 # misc
 anyhow = "1.0.65"
 clap = { version = "4.1.1", features = ["derive"], optional = true }
+sha2 = "0.10.7"
+ethers = "2.0.8"
 
 
 [dev-dependencies]
@@ -64,7 +66,15 @@ sgx = []
 
 [[bin]] # Bin to run the sgx-signer rpc
 name = "secure-signer"
-path = "src/main.rs"
+path = "src/secure-signer/bin/main.rs"
+
+[[bin]] # Bin to run the sgx-guardian rpc
+name = "guardian"
+path = "src/guardian/bin/main.rs"
+
+[[bin]] # Bin to run the sgx-validator rpc
+name = "validator"
+path = "src/validator/bin/main.rs"
 
 [[bin]] # Bin to run the client 
 name = "client"
