--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,16 @@ keys/
 keystores/
 ss_out/
 Secure-Signer/*
+Guardian/*
+Validator/*
+image
+initfs
 
 # Can't keep empty folders but need it for tests not to break.
 # So this file is kept here as a place holder.
 !Secure-Signer/.__occlum_status
+!Validator/.__occlum_status
+!Guardian/.__occlum_status
 
 # Avoid adding consensus spec files to repo.
 tests/consensus-spec-tests/
