--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ rand = "0.8.4"
 rand_chacha = "0.2"
 hex = "0.4.3"
 ecies = { version = "0.2.2", default-features = false, features = ["pure"] }
-openssl = { version = "0.10.42", features = ["vendored"] }
+openssl = "0.10.42"
 bytes = "1"
 sha3 = "0.10.6"
 
