--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ num-bigint = "0.4"
 # server deps
 tokio = { version = "1", features = ["full"] }
 axum = { version = "0.6.20", features = ["macros"] }
+tracing = "0.1.39"
 tracing-subscriber = "0.3.17"
 axum-test = "12.3.0"
 
@@ -78,7 +79,7 @@ path = "src/bin/guardian.rs"
 name = "validator"
 path = "src/bin/validator.rs"
 
-[[bin]] # Bin to run the client 
+[[bin]] # Bin to run the client
 name = "client"
 path = "src/client/mod.rs"
 required-features = ["clap"]
