--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ libsecp256k1 = "0.7.1"
 rand = "0.8.4"
 rand_chacha = "0.2"
 hex = "0.4.3"
-ecies = {version = "0.2.2", default-features = false, features = ["pure"]}
+ecies = { version = "0.2.2", default-features = false, features = ["pure"] }
 openssl = "0.10.42"
 bytes = "1"
 sha3 = "0.10.6"
@@ -44,7 +44,9 @@ num-bigint = "0.4"
 
 # server deps
 tokio = { version = "1", features = ["full"] }
-warp = "0.3"
+axum = { version = "0.6.20", features = ["macros"] }
+tracing-subscriber = "0.3.17"
+axum-test = "12.3.0"
 
 # client deps
 reqwest = { version = "0.11", features = ["json"] }
@@ -52,6 +54,8 @@ reqwest = { version = "0.11", features = ["json"] }
 # misc
 anyhow = "1.0.65"
 clap = { version = "4.1.1", features = ["derive"], optional = true }
+ethers = "2.0.8"
+async-trait = "0.1.73"
 
 
 [dev-dependencies]
@@ -64,7 +68,15 @@ sgx = []
 
 [[bin]] # Bin to run the sgx-signer rpc
 name = "secure-signer"
-path = "src/main.rs"
+path = "src/bin/secure-signer.rs"
+
+[[bin]] # Bin to run the sgx-guardian rpc
+name = "guardian"
+path = "src/bin/guardian.rs"
+
+[[bin]] # Bin to run the sgx-validator rpc
+name = "validator"
+path = "src/bin/validator.rs"
 
 [[bin]] # Bin to run the client 
 name = "client"
